--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ youtube_username                          :
 features                                  :
 
   - title                                 : Magick mirror
-    description                           : Get advice on looks from your selfies
+    description                           : Get advice on your looks
     fontawesome_icon_name                 : magic
     
   - title                                 : Most accurate and most reliable model
@@ -52,7 +52,7 @@ features                                  :
 
 # Theme Settings
 topbar_color                              : "#FF5733"
-topbar_transparency                       : 0.1
+topbar_transparency                       : 0.5
 topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/headerimage.png                    # Replace with alternative image path or image URL.
